--- a/project05_cvPanel/applications.html
+++ b/project05_cvPanel/applications.html
@@ -43,11 +43,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link active" href="applications.html">Applications</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Links</a>
+                        <a class="nav-link" href="currentProjects.html">Current Projects</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -56,11 +56,10 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="cv.html">CV</a></li>
-                            <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="currentProjects.html">Current Projects</a></li>
+                            <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -90,7 +89,7 @@
                             contact and able to update their information.
                         </p>
                         <button class="btn btn-outline-success" onclick="openModalProjects('p1')">
-                            <a href="">Run the Project</a>
+                            Run the Project
                         </button>
                         <div class="card-body">
                             <a href="#" class="card-link">Source Code</a>
