--- a/project05_cvPanel/currentProjects.html
+++ b/project05_cvPanel/currentProjects.html
@@ -44,20 +44,19 @@
                         <a class="nav-link" href="applications.html">Applications</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Links</a>
+                        <a class="nav-link active" href="currentProjects.html">Current Projects</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Informations
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="cv.html">CV</a></li>
-                            <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item active" href="currentProjects.html">Current Projects</a></li>
+                            <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
