--- a/project05_cvPanel/cv.html
+++ b/project05_cvPanel/cv.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="applications.html">Applications</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Links</a>
+                        <a class="nav-link" href="currentProjects.html">Current Projects</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
@@ -50,12 +50,12 @@
                             Informations
                         </a>
                         <ul class="dropdown-menu active" aria-labelledby="navbarDropdown">
+                 
                             <li><a class="dropdown-item active" href="cv.html">CV</a></li>
-                            <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="currentProjects.html">Current Projects</a></li>
+                            <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
