--- a/project05_cvPanel/currentProjects.html
+++ b/project05_cvPanel/currentProjects.html
@@ -75,13 +75,84 @@
     <main>
 
         <div class="row">
-            <div class="col-6">
+            <div class="col-5">
                 <div class="github-card" data-github="MrKacmaz" data-width="400" data-height="" data-theme="medium">
                 </div>
                 <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
             </div>
-            <div class="col-6">
+            <!-- <div class="col-6">
                 <script src="https://gist.github.com/MrKacmaz/beeaecf656839e9dfdb7e327a51f2b96.js"></script>
+            </div> -->
+
+            <div class="accordion col-7" id="accordionExample">
+
+                <div id="1" class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Contact Page
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <script
+                                src="http://gist-it.appspot.com/https://github.com/MrKacmaz/Internship/blob/main/Project01_ResponsePage/response.html">
+                                </script>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="2" class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Contact API Page
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <script
+                                src="http://gist-it.appspot.com/https://github.com/MrKacmaz/Internship/blob/main/project03_ResponsePageAPI/index.html">
+                                </script>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="3" class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            OKEY Result Page
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <script
+                                src="http://gist-it.appspot.com/https://github.com/MrKacmaz/Internship/blob/main/Project02_SingleGamePage/index.html">
+                                </script>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="4" class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            Coin Exchange Page
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <script
+                                src="http://gist-it.appspot.com/https://github.com/MrKacmaz/Internship/blob/main/project04_coin/index.html">
+                                </script>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
