--- a/project05_cvPanel/applications.html
+++ b/project05_cvPanel/applications.html
@@ -92,7 +92,7 @@
                             Run the Project
                         </button>
                         <div class="card-body">
-                            <a href="#" class="card-link">Source Code</a>
+                            <a href="currentProjects.html#1" class="card-link">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                         <button class="btn btn-outline-success" onclick="openModalProjects('p2')">Run the
                             Project</button>
                         <div class="card-body">
-                            <a href="#" class="card-link">Source Code</a>
+                            <a href="currentProjects.html#2" class="card-link">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                         <button class="btn btn-outline-success" onclick="openModalProjects('p3')">Run the
                             Project</button>
                         <div class="card-body">
-                            <a href="#" class="card-link">Source Code</a>
+                            <a href="currentProjects.html#3" class="card-link">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                         <button class="btn btn-outline-success" onclick="openModalProjects('p4')">Run the
                             Project</button>
                         <div class="card-body">
-                            <a href="#" class="card-link">Source Code</a>
+                            <a href="currentProjects.html#4" class="card-link">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -178,7 +178,9 @@
         </div>
     </footer>
 
+    <script>
 
+    </script>
 
 </body>
 
