--- a/project05_cvPanel/template_application.html
+++ b/project05_cvPanel/template_application.html
@@ -59,13 +59,12 @@
 
     </div>
 
-
     <!-- Upgrade Skills Section -->
-    <div class="w3-container w3-padding-64">
+    <div class="w3-container w3-padding-64 w3-center">
         <div class="w3-row-padding">
 
             <div class="w3-row-padding" style="margin-top:64px">
-                <div class="row text-center">
+                <div class="row text-center w3-center">
 
                     <!-- CONTACT APP -->
                     <div class="col-3">
@@ -86,7 +85,7 @@
                                     <a href="currentProjects.html#1" class="card-link">Source Code</a>
                                 </div>
                             </div>
-                        </div>
+                        </div><br>
                         <!-- Bars for 1. Project -->
                         <div class="w3-col m8">
                             <p class="w3-wide">HTML</p>
@@ -122,7 +121,7 @@
                                     <a href="currentProjects.html#2" class="card-link">Source Code</a>
                                 </div>
                             </div>
-                        </div>
+                        </div><br>
                         <!-- Bars for 1. Project -->
                         <div class="w3-col m8">
                             <p class="w3-wide">HTML</p>
@@ -159,7 +158,7 @@
                                     <a href="currentProjects.html#3" class="card-link">Source Code</a>
                                 </div>
                             </div>
-                        </div>
+                        </div><br>
                         <!-- Bars for 1. Project -->
                         <div class="w3-col m8">
                             <p class="w3-wide">HTML</p>
@@ -195,7 +194,7 @@
                                     <a href="currentProjects.html#4" class="card-link">Source Code</a>
                                 </div>
                             </div>
-                        </div>
+                        </div><br>
                         <!-- Bars for 1. Project -->
                         <div class="w3-col m8">
                             <p class="w3-wide">HTML</p>
