--- a/project05_cvPanel/template_cv.html
+++ b/project05_cvPanel/template_cv.html
@@ -44,64 +44,7 @@
         </div>
     </div>
 
-    <!-- About Section -->
-    <div class="w3-container" id="home" style="padding:128px 16px" id="about">
-        <h3 class="w3-center">WELCOME</h3>
-        <p class="w3-center w3-large">ALPEREN KAÇMAZ</p>
-        <p class="w3-center w3-large">WEB DEV - AI DEV - SEMI-PRO GAMER</p>
-        <div class="w3-row-padding w3-center" style="margin-top:64px">
-
-            <!-- About Me -->
-            <div class="w3-quarter">
-                <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-person"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
-                </svg>
-                <p class="w3-large">About Me</p>
-                <p>I'm Alperen Kaçmaz, Web Developer, AI Developer and OOP
-                    Designer</p>
-            </div>
-
-            <!-- Tools -->
-            <div class="w3-quarter">
-                <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor"
-                    class="bi bi-code-slash" viewBox="0 0 16 16">
-                    <path
-                        d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z" />
-                </svg>
-                <p class="w3-large">Tools</p>
-                <p>I am working with the OOP model. I am currently
-                    improving my skills in C#,
-                    Python, and PHP and interested in AI technologies. I'm a semi-professional gamer
-                </p>
-            </div>
-
-            <!-- Dev -->
-            <div class="w3-quarter">
-                <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-                <p class="w3-large">Dev</p>
-                <p>I am interested in Game Development. I usually develop my projects in Java and
-                    Python languages and I
-                    develop for Android and
-                    web environments. </p>
-            </div>
-
-            <!-- Educaion -->
-            <div class="w3-quarter">
-                <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-journal"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" />
-                    <path
-                        d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" />
-                </svg>
-                <p class="w3-large">Education</p>
-                <p>I am a junior at Akdeniz University Computer Science and Engineering Department.
-                </p>
-            </div>
-        </div>
-    </div>
+    <br><br><br>
 
     <!-- Page Container -->
     <div class="w3-content w3-margin-top" style="max-width:1400px;">
@@ -109,18 +52,22 @@
         <!-- The Grid -->
         <div class="w3-row-padding">
 
-            <!-- Left Column -->
+            <!-- Skill Col -->
             <div class="w3-third">
 
                 <div class="w3-white w3-text-grey w3-card-4">
                     <div class="w3-display-container">
-                        <img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">
-                        <div class="w3-display-bottomleft w3-container w3-text-black">
-                            <h2>Alperen Kaçmaz</h2>
+                        <img src="images/pp_1.jpeg" style="width:100%" alt="Avatar">
+                        <div class="w3-display-bottomright w3-container w3-text-white w3-hover-text-orange">
+                            <h2 class="w3-center">Alperen Kaçmaz</h2>
                         </div>
-                    </div>
+                    </div><br>
+
+
                     <div class="w3-container">
-                        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-deep-orange"></i>Int. Web
+
+                        <!-- Profile -->
+                        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-deep-orange"></i>Intern Web
                             Dev</p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-deep-orange"></i>Antalya, TR</p>
                         <p><i
@@ -130,6 +77,7 @@
                             6762</p>
                         <hr>
 
+                        <!-- Skills -->
                         <p class="w3-large"><b><i
                                     class="fa fa-asterisk fa-fw w3-margin-right w3-text-orange"></i>Skills</b></p>
                         <p>Java & C#</p>
@@ -137,7 +85,7 @@
                             <div class="w3-container w3-center w3-round-xlarge w3-orange w3-text-white"
                                 style="width:70%">70%</div>
                         </div><br>
-                        <p>AI & ML (Phyton)</p>
+                        <p>AI & ML (Python)</p>
                         <div class="w3-light-grey w3-round-xlarge w3-small">
                             <div class="w3-container w3-center w3-round-xlarge w3-orange w3-text-white"
                                 style="width:30%">30%
@@ -160,24 +108,26 @@
                         </div>
                         <br>
 
+                        <!-- Language -->
                         <p class="w3-large w3-text-theme"><b><i
                                     class="fa fa-globe fa-fw w3-margin-right w3-text-orange"></i>Languages</b></p>
                         <p>English</p>
                         <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-orange" style="height:24px;width:85%"></div>
-                        </div>
-                        <p>Turkish</p>
+                            <div class="w3-round-xlarge w3-orange" style="height:24px;width:75%"></div>
+                        </div><br>
+                        <p>Turkish (Native)</p>
                         <div class="w3-light-grey w3-round-xlarge">
                             <div class="w3-round-xlarge w3-orange" style="height:24px;width:100%"></div>
                         </div><br>
 
                     </div>
+
                 </div><br>
 
-                <!-- End Left Column -->
+                <!-- End Skill Col -->
             </div>
 
-            <!-- Right Column -->
+            <!-- Education Col -->
             <div class="w3-twothird">
 
                 <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -229,15 +179,10 @@
                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Anatolian High School Hasan Tekin Ada Anatolian High School</b></h5>
                         <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
-                        <p>Master Degree</p>
-                        <hr>
+                        <p>92 / 100</p>
+                        <p>Denizli, Turkey</p>
                     </div>
-                    <div class="w3-container">
-                        <h5 class="w3-opacity"><b>School of Coding</b></h5>
-                        <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
-                        <p>Bachelor Degree</p><br>
-                    </div>
-                </div>
+                </div><br>
 
                 <!-- End Right Column -->
             </div>
