--- a/project05_cvPanel/template_index.html
+++ b/project05_cvPanel/template_index.html
@@ -161,7 +161,7 @@
                 <div class="w3-grey">
                     <div class="w3-container w3-dark-grey w3-center" style="width:65%">65%</div>
                 </div><br>
-                <p class="w3-wide">AI & ML (Phyton)</p>
+                <p class="w3-wide">AI & ML (Python)</p>
                 <div class="w3-grey">
                     <div class="w3-container w3-dark-grey w3-center" style="width:45%">45%</div>
                 </div><br>
