template index css fixed

--- a/project05_cvPanel/template_currentProject.html
+++ b/project05_cvPanel/template_currentProject.html
@@ -105,111 +105,95 @@
 
 
     <!-- Work Section -->
-    <div class="w3-container w3-light-gray" style="padding:128px 16px" id="work">
-        <h3 class="w3-center">MY WORKS</h3>
-        <p class="w3-center w3-large">What i've done for coder</p>
+    <div class="w3-container w3-light-gray" style="padding:75px 16px" id="work">
+        <h3 class="w3-center w3-wide">MY WORKS</h3>
+        <p class="w3-center w3-large w3-wide">What i've done for coder</p>
 
-        <div class="w3-row-padding" style="margin-top:64px">
 
-            <div class="row text-center">
-                <div class="col-4">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W4A_E0qOiXQ?start=122"
-                            title="YouTube video player"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
+        <div class="row">
+            <div class="col-5">
+                <div class="github-card" data-github="MrKacmaz" data-width="400" data-height="" data-theme="medium">
                 </div>
-                <div class="col-4">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9ZI-VOhUgLs"
-                            title="YouTube video player"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WGgHLTSWcoE"
-                            title="YouTube video player"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
+                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
             </div>
 
+            <div class="accordion col-7" id="accordionExample">
+
+                <div id="1" class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Contact Page
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <script
+                                src="http://gist-it.appspot.com/https://github.com/MrKacmaz/Internship/blob/main/Project01_ResponsePage/response.html">
+                                </script>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="2" class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Contact API Page
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <script
+                                src="http://gist-it.appspot.com/https://github.com/MrKacmaz/Internship/blob/main/project03_ResponsePageAPI/index.html">
+                                </script>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="3" class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            OKEY Result Page
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <script
+                                src="http://gist-it.appspot.com/https://github.com/MrKacmaz/Internship/blob/main/Project02_SingleGamePage/index.html">
+                                </script>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="4" class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            Coin Exchange Page
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <script
+                                src="http://gist-it.appspot.com/https://github.com/MrKacmaz/Internship/blob/main/project04_coin/index.html">
+                                </script>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
         </div>
 
     </div>
 
 
-    <!-- Skills Section -->
-    <div class="w3-container w3-padding-64">
-        <div class="w3-row-padding">
-            <div class="w3-col m4">
-                <h3>My Skills</h3>
-                <p>Develop my projects in Java and Python languages and I develop for Android and web environments.
-                    Also, I am working with the OOP model. I am currently improving my skills in C#, Python, and PHP and
-                    interested in AI technologies. I'm a semi-professional gamer</p>
-            </div>
-            <div class="w3-col m8">
-                <p class="w3-wide">Java & OOP</p>
-                <div class="w3-grey">
-                    <div class="w3-container w3-dark-grey w3-center" style="width:70%">70%</div>
-                </div><br>
-                <p class="w3-wide">Web Dev (JS,HTML,CSS,BOOTSTRAP,PHP)</p>
-                <div class="w3-grey">
-                    <div class="w3-container w3-dark-grey w3-center" style="width:65%">65%</div>
-                </div><br>
-                <p class="w3-wide">AI & ML (Phyton)</p>
-                <div class="w3-grey">
-                    <div class="w3-container w3-dark-grey w3-center" style="width:45%">45%</div>
-                </div><br>
-                <p class="w3-wide">C# & C++</p>
-                <div class="w3-grey">
-                    <div class="w3-container w3-dark-grey w3-center" style="width:50%">50%</div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <!-- Contact Section -->
-    <div class="w3-container w3-light-gray" style="padding:128px 16px" id="contact">
-        <h3 class="w3-center">CONTACT</h3>
-        <p class="w3-center w3-large">Lets get in touch. Send me a message:</p>
-        <div style="margin-top:48px">
-
-            <!-- Location -->
-            <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>
-                <a class="text-decoration-none"
-                    href="https://www.google.com/maps/place/Atalar,+925.+Sk.+No:6,+20150+Denizli+Merkez%2FDenizli/@37.7717872,29.0873205,19z/data=!3m1!4b1!4m13!1m7!3m6!1s0x14c73fabc5bf9849:0x429712349488d159!2sAtalar,+952.+Sk.+No:4,+20150+Denizli+Merkez%2FDenizli!3b1!8m2!3d37.7719169!4d29.0877132!3m4!1s0x14c73fabc8aa514b:0xec106c1472ba0cde!8m2!3d37.7717861!4d29.0878677?hl=tr"
-                    target="_blank">Location</a>
-            </p>
-
-            <!-- Phone -->
-            <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +90 531 014 6762 </p>
-
-            <!-- Mail -->
-            <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email:
-                <a class="text-decoration-none" href="mailto:alperen703.akm@gmail.com">
-                    alperen703.akm@gmail.com</a>
-            </p>
-            <br>
-
-            <!-- Send Message -->
-            <form action="#" target="_blank">
-                <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
-                <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
-                <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-                <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
-                <p>
-                    <button class="w3-button w3-black" type="submit"><i class="fa fa-paper-plane"></i> SEND
-                        MESSAGE</button>
-                </p>
-            </form>
-
-        </div>
-    </div>
 
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-64">
