--- a/project05_cvPanel/template_currentProject.html
+++ b/project05_cvPanel/template_currentProject.html
@@ -32,74 +32,27 @@
     <!-- Navbar -->
     <div class="w3-top">
         <div class="w3-bar w3-white w3-card" id="myNavbar">
-            <a href="template_index.html" class="w3-bar-item w3-button w3-wide">Home</a>
+            <a href="template_index.html"
+                class="w3-bar-item w3-button w3-wide w3-hover-deep-orange w3-hover-text-white">Home</a>
             <!-- Right-sided navbar links -->
             <div class="w3-right w3-hide-small">
-                <a href="template_application.html" class="w3-bar-item w3-button">Applications</a>
-                <a href="template_currentProject.html" class="w3-bar-item w3-button"></i>Current
-                    Projects</a>
-                <a href="template_cv.html" class="w3-bar-item w3-button"></i>CV</a>
+                <a href="template_application.html"
+                    class="w3-bar-item w3-button w3-hover-amber w3-hover-text-white">Applications</a>
+                <a href="template_currentProject.html"
+                    class="w3-bar-item w3-button w3-hover-purple w3-hover-text-white"></i>Current Projects</a>
+                <a href="template_cv.html" class="w3-bar-item w3-button w3-hover-indigo w3-hover-text-white"></i>CV</a>
                 <a href="#" class="w3-bar-item w3-button w3-disabled "></i>Panel</a>
             </div>
         </div>
     </div>
 
     <!-- About Section -->
-    <div class="w3-container" id="home" style="padding:128px 16px" id="about">
-        <h3 class="w3-center">WELCOME</h3>
-        <p class="w3-center w3-large">ALPEREN KAÇMAZ</p>
-        <p class="w3-center w3-large">WEB DEV - AI DEV - SEMI-PRO GAMER</p>
+    <div class="w3-container" id="home" style="padding:128px 16px">
+        <h2 class="w3-center w3-large">ALPEREN KAÇMAZ</h2>
         <div class="w3-row-padding w3-center" style="margin-top:64px">
-
-            <!-- About Me -->
-            <div class="w3-quarter">
-                <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-person"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
-                </svg>
-                <p class="w3-large">About Me</p>
-                <p>I'm Alperen Kaçmaz, Web Developer, AI Developer and OOP
-                    Designer</p>
+            <div class="github-card" data-github="MrKacmaz" data-width="400" data-height="" data-theme="medium">
             </div>
-
-            <!-- Tools -->
-            <div class="w3-quarter">
-                <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor"
-                    class="bi bi-code-slash" viewBox="0 0 16 16">
-                    <path
-                        d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z" />
-                </svg>
-                <p class="w3-large">Tools</p>
-                <p>I am working with the OOP model. I am currently
-                    improving my skills in C#,
-                    Python, and PHP and interested in AI technologies. I'm a semi-professional gamer
-                </p>
-            </div>
-
-            <!-- Dev -->
-            <div class="w3-quarter">
-                <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-                <p class="w3-large">Dev</p>
-                <p>I am interested in Game Development. I usually develop my projects in Java and
-                    Python languages and I
-                    develop for Android and
-                    web environments. </p>
-            </div>
-
-            <!-- Educaion -->
-            <div class="w3-quarter">
-                <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-journal"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z" />
-                    <path
-                        d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z" />
-                </svg>
-                <p class="w3-large">Education</p>
-                <p>I am a junior at Akdeniz University Computer Science and Engineering Department.
-                </p>
-            </div>
+            <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
         </div>
     </div>
 
@@ -110,14 +63,9 @@
         <p class="w3-center w3-large w3-wide">What i've done for coder</p>
 
 
-        <div class="row">
-            <div class="col-5">
-                <div class="github-card" data-github="MrKacmaz" data-width="400" data-height="" data-theme="medium">
-                </div>
-                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-            </div>
+        <div class="w3-container">
 
-            <div class="accordion col-7" id="accordionExample">
+            <div class="accordion" id="accordionExample">
 
                 <div id="1" class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
@@ -186,25 +134,24 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
+
         </div>
 
     </div>
 
 
 
-
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-64">
-        <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+        <a href="#home" class="btn w3-white w3-hover-gray w3-monospace"><i
+                class="fa fa-arrow-up w3-margin-right w3-text-lime"></i>To the top<i
+                class="fa fa-arrow-up w3-margin-left w3-text-orange"></i></a>
         <div class="w3-xlarge w3-section">
-            <!-- <i class="fa fa-facebook-official w3-hover-opacity"></i>
-            <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
-            <i class="fa fa-github   w3-hover-opacity"></i> -->
+
             <!-- Facebook Icon -->
-            <a class="link-light" target="_blank" href="https://www.facebook.com/mrkacmaz"><svg
+            <a class="w3-text-blue w3-hover-text-white" target="_blank" href="https://www.facebook.com/mrkacmaz"><svg
                     xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-facebook"
                     viewBox="0 0 16 16">
                     <path
@@ -212,7 +159,7 @@
                 </svg></a>
 
             <!-- Github Icon -->
-            <a class="link-light" href="https://github.com/MrKacmaz" target="_blank"><svg
+            <a class="w3-text-deep-purple w3-hover-text-white" href="https://github.com/MrKacmaz" target="_blank"><svg
                     xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-github"
                     viewBox="0 0 16 16">
                     <path
@@ -220,16 +167,16 @@
                 </svg></a>
 
             <!-- LinkedIn Icon -->
-            <a class="link-light" href="https://www.linkedin.com/in/alperen-kacmaz-2202/" target="_blank"><svg
-                    xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-linkedin"
-                    viewBox="0 0 16 16">
+            <a class="w3-text-aqua w3-hover-text-white" href="https://www.linkedin.com/in/alperen-kacmaz-2202/"
+                target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+                    class="bi bi-linkedin" viewBox="0 0 16 16">
                     <path
                         d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
                 </svg></a>
 
             <!-- Instagrram Icon -->
-            <a class="link-light" href="https://www.instagram.com/mrkacmaz.py/" target="_blank"><svg
-                    xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+            <a class="w3-text-purple w3-hover-text-white" href="https://www.instagram.com/mrkacmaz.py/"
+                target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
                     class="bi bi-instagram" viewBox="0 0 16 16">
                     <path
                         d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
